syntax = "proto3";

option csharp_namespace = "PingPong";

package pingpong;

service PingPong {
  rpc SendPing (PingRequest) returns (PongReply);
}

message PingRequest {
  string message = 1;
}

message PongReply {
  string message = 1;
}
